added peers/teacher insights to polish off the prjct

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 <body>
     <nav>
      <ul class="nav-menu">
+        <li><a href="index.html">Home</a></li>
         <li><a href="#introduction">Introduction</a></li>
         <li><a href="#otherProjects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
         <li><a href="https://docs.google.com/document/d/1xmJDqDBjfmn-o9ZyGwjCUQ2ujlfJmEoQr0GKmHTQkI8/edit?usp=sharing">Resume</a></li>
+        <li><a href="recentProjects.html">Recent Projects</a></li>
      </ul>
     </nav>
 
@@ -131,10 +133,20 @@
                 <img src="Images\RobloxScreenShot20250408_205503760.png" alt="Soccer Stadium 2" width="500" height="300">
                 <img src="Images\RobloxScreenShot20250408_171233992.png" alt="Soccer Stadium 3" width="500" height="300">
                 <img src="Images\RobloxScreenShot20250408_205541900.png" alt="Soccer Stadium 4" width="500" height="300">
+                <br><br>
+                <dd><em>UnrealEngine5 Concept Build</em></dd>
+                <br>
+                <img src="Images\Screenshot 2025-06-06 184324.png" alt="Unreal Engine 5 Concept Build" width="500" height="300">
+                <img src="Images\Screenshot 2025-06-06 184351.png" alt="Unreal Engine 5 Concept Build 2" width="500" height="300">
+                <img src="Images\Screenshot 2025-06-06 184412.png" alt="Unreal Engine 5 Concept Build 3" width="500" height="300">
+                <img src="Images\Screenshot 2025-06-06 184428.png" alt="Unreal Engine 5 Concept Build 4" width="500" height="300">
+                <img src="Images\Screenshot 2025-06-06 184445.png" alt="Unreal Engine 5 Concept Build 5" width="500" height="300">
+                <img src="Images\Screenshot 2025-06-06 184630.png" alt="Unreal Engine 5 Concept Build 6" width="500" height="300">
+                <br><br>
                
             </ul>
-            <br>
-            <br>
+            <br><br>
+            <br><br>
             <h3>Code</h3>
             <ul>
                 <li>A.L.L.N (AI)</li>
