--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </nav>
 
     <header>
-        <h1>Justiss Holden</h1>
+        <h1>--Video Game Developer--</h1>
         
     </header>
    
