tweaked last change bc it looked weird

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </nav>
 
     <header>
-        <h1>--Video Game Developer--</h1>
+        <h1><em> Game Developer </em></h1>
         
     </header>
    
