finished all final tweaks before handing it in

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </nav>
 
     <header>
-        <h1><em> Game Developer </em></h1>
+        <h1><em> Video Game Developer </em></h1>
         
     </header>
    
