added index page

--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
             <h2>Love2D</h2>
             <ul>
                 <h3><strong>NoLove2D</strong></h3>
-                <dd><em>NoLove2D, is a 2D top down omni directional shooter where you must run around to survive and
+                <dd><em>NoLove2D, is a 2D top down omni directional shooter that I worked on with 2 other classmates,
+                     where you must run around to survive and
                     shoot enemies. You must collect scrap to upgrade your 3 stats.</em></dd>
                 <li>Speed</li>
                 <li>Attack</li> 
