added my UE5 prjct and tweaked ALLN desc.

--- a/index.html
+++ b/index.html
@@ -46,6 +46,18 @@
             <h1>My Projects</h1>
             <p>Here are some of the projects I've worked on:</p>
             <ol>
+                <h2>Unreal Engine 5</h2>
+                <ul>
+                    <li>Final Bell</li>
+                </ul>
+                <br><br>
+                <dd><em>Final Bell is a 2D stand and bang boxing game where players must fight and use combos to defeat Ai opponents.</em></dd>
+                    <img src="Images\Screenshot 2025-07-10 120945.png" alt="Final Bell" width="500" height="300">
+                    <img src="Images\Screenshot 2025-07-10 120959.png" alt="Final Bell 2" width="500" height="300">
+                    <img src="Images\Screenshot 2025-07-10 121028.png" alt="Final Bell 3" width="500" height="300">
+                    <img src="Images\Screenshot 2025-07-10 120704.png" alt="Final Bell 4" width="500" height="300">
+                    <img src="Images\Screenshot 2025-07-10 120730.png" alt="Final Bell 5" width="500" height="300">
+                    <img src="Images\Screenshot 2025-07-10 120748.png" alt="Final Bell 6" width="500" height="300">
                
                 <h2>Roblox</h2>
                 <ul>
@@ -152,7 +164,7 @@
             <ul>
                 <li>A.L.L.N (AI)</li>
                 <dd><em>A.L.L.N (AI) is a project  written in pure python, that focuses on creating an AI system that can learn and adapt to better understand people and hopefully,
-                    one day it can understand emotions and offer support to the user, just a side project im working on as a hobby.</em></dd>
+                    one day it can understand emotions and offer support to the user, just a side project im working on as a hobby. It will soon have TTS and memory simulation.</em></dd>
                 <img src="Images\Screenshot 2025-05-14 170213.png" alt="A.L.L.N Code" width="500" height="300">
                 <img src="Images\Screenshot 2025-05-14 170240.png" alt="A.L.L.N Code 2" width="500" height="300">
                 <img src="Images\Screenshot 2025-05-14 170252.png" alt="A.L.L.N Code 3" width="500" height="300">
