added neccessary files and code/coce adjustments for new portfolio entry for as3

--- a/recentProjects.html
+++ b/recentProjects.html
@@ -45,6 +45,32 @@
             </div>
             
         </div>
+        <br><br>
+        <h1>School Group Project</h1>
+        <div class="project-item">
+            <p><em>Cursed and Reckless is a wave-based action game made in Unreal Engine 5 using both Blueprints and C++. Players fight off enemy waves at night and visit a shop during the day to upgrade with gold.
+                    My role: I created the enemy AI and spawning system in Blueprints, wrote the C++ GameInstance class, and handled all cinematics, cutscenes, SFX, and VFX.</em></p>
+            <ul>
+                <img src="Images\Screenshot 2025-08-08 043059.png" alt="Game Code" width="500" height="300">
+                <img src="Images\Screenshot 2025-08-08 043141.png" alt="Game Code 2" width="500" height="300">
+                <img src="Images\Screenshot 2025-08-08 043146.png" alt="Game Code 3" width="500" height="300">
+                <img src="Images\Screenshot 2025-08-08 043233.png" alt="Game Code 4" width="500" height="300">
+                <img src="Images\Screenshot 2025-08-08 043244.png" alt="Game Code 5" width="500" height="300">
+                <img src="Images\Screenshot 2025-08-08 043708.png" alt="Game Code 6" width="500" height="300">
+                <img src="Images\Screenshot 2025-08-08 043720.png" alt="Game Code 7" width="500" height="300">
+                <br><br>
+                <h3><em>Game Credits</em></h3>
+                <img src="Images\Screenshot 2025-08-08 043115.png" alt="Game Code 8" width="500" height="300">
+            </ul>
+        </div>
+        <br><br>
+        <h1>Personal Website</h1>
+        <div class="project-item">
+            <p><em>My personal website is built using HTML, CSS. It serves as a portfolio to showcase my projects and skills. The site features a clean design with sections for my biography, recent projects, and contact information.
+                I used responsive design techniques to ensure it looks good on both desktop and mobile devices. This project helped me improve my web development skills and understand how to create user-friendly interfaces.</em></p>
+        </div>  
+        <br>
+        <br>
     </div>
     <footer>
         <p>&copy; 2025 Justiss Holden. All rights reserved.</p>
